add complete sap2000 tunnel lining model

--- a/sap2000/SAP2000_Tutorial.ipynb
+++ b/sap2000/SAP2000_Tutorial.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "55c3f933",
+   "id": "b460a72b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,7 +100,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "0c990d8b",
+   "id": "03eda697",
    "metadata": {},
    "outputs": [
     {
@@ -493,8 +493,11 @@
     "\n",
     "# mySAPObject = None\n",
     "\n",
+    "\n",
+    "\n",
     " \n",
     "\n",
+    "#display results\n",
     "#fill independent results\n",
     "\n",
     "IndResult = [0,0,0,0,0,0,0]\n",
@@ -540,45 +543,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "12e5c71e",
+   "execution_count": 8,
+   "id": "a97e8cde",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "('3',\n",
-       " 0,\n",
-       " 1,\n",
-       " <System.String[] object at 0x000001914795D908>,\n",
-       " <System.String[] object at 0x000001914795DB88>,\n",
-       " <System.String[] object at 0x000001914795DD48>,\n",
-       " <System.String[] object at 0x000001914795D088>,\n",
-       " <System.Double[] object at 0x000001914795D348>,\n",
-       " <System.Double[] object at 0x000001914795D1C8>,\n",
-       " <System.Double[] object at 0x000001914795DD08>,\n",
-       " <System.Double[] object at 0x000001914795DE08>,\n",
-       " <System.Double[] object at 0x000001914795DE88>,\n",
-       " <System.Double[] object at 0x000001914795D188>,\n",
-       " <System.Double[] object at 0x000001914795D108>)"
+       "0.006511371527818799"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "PointName2, ObjectElm, NumberResults, Obj, Elm, ACase, StepType, StepNum, U1, U2, U3, R1, R2, R3"
+    "U1[0]"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "49a9f938",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
